--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABC College</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Saveetha College</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <img src="images/logo.png" alt="College Logo">
-    <h1>ABC College</h1>
+    <img src="saveetha logo.jpg" alt="College Logo">
+    <h1>Saveetha College</h1>
 </header>
 
 <nav>
@@ -21,12 +21,12 @@
 </nav>
 
 <article>
-    <h2>Welcome to ABC College</h2>
-    <p>ABC College is a prestigious institution .</p>
+    <h2>Welcome to Saveetha College</h2>
+    <p>Saveetha College is a prestigious institution .</p>
 <article>
 
 <footer>
-    &copy; 2024 ABC College. All rights reserved.
+    &copy; 2024 Saveetha College. All rights reserved.
 </footer>
 
 </body>
